--- a/proJs/src/styles.css
+++ b/proJs/src/styles.css
@@ -91,7 +91,11 @@ body {
   height: 28px;
   background-color: #ffdc40;
 }
-
+.input_text{
+  border: none;
+  outline: none;
+  margin-left: 10px;
+}
 .lableText{
   display: flex;
   flex-direction: column;
@@ -147,13 +151,7 @@ body {
   background-color: white;
   margin-bottom: 20px;
 }
-/* #buttonText {
-  background-color: #833ae0;
-  border: none;
-  border-radius: 72px;
-  color: white;
-  cursor: pointer;
-} */
+
 #deletebtn{
   border-radius: 50%;
   border: 1px solid #c4c4c4;
@@ -163,6 +161,9 @@ body {
   width: 25px;
   padding: 0 3px 25px 3px;   
   cursor: pointer;
+  margin-left: 37px;
+  margin-top: 4px;
+  margin-bottom: 4px;
 }
 #imageSort:hover {
   filter: invert(100%);
